syntax = "proto3";

option go_package = "graphql-grpc-go-microservice-project/account/protobuf";

import "google/protobuf/timestamp.proto";

message Account {
    string id = 1;
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message CreateAccountRequest {
    string email = 1;
    string name = 2;
}

message CreateAccountResponse {
    oneof result {
        Account account = 1;
        string error = 2;
    }
}

message GetAccountByIDRequest {
    string id = 1;
}

message GetAccountByIDResponse {
    oneof result {
        Account account = 1;
        string error = 2;
    }
}

message GetAccountByEmailRequest {
    string email = 1;
}

message GetAccountByEmailResponse {
    oneof result {
        Account account = 1;
        string error = 2;
    }
}

message ListAccountsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ListAccountsResponse {
    repeated Account accounts = 1;
    string error = 2;
}

service AccountService {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
    rpc GetAccountByID(GetAccountByIDRequest) returns (GetAccountByIDResponse);
    rpc GetAccountByEmail(GetAccountByEmailRequest) returns (GetAccountByEmailResponse);
    rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);
}
